@@ -7,6 +7,8 @@ $updating_public = false;;
 if ( $is_admin && ! empty ( $public ) && $public_access == "Y" ) {
   $updating_public = true;
   $prefuser = "__public__";
+} elseif (($user != $login) && ($is_admin || $is_nonuser_admin)) {
+  $prefuser = "$user";
 } else {
   $prefuser = "$login";
 }
@@ -34,10 +36,13 @@ while ( list ( $key, $value ) = each ( $HTTP_POST_VARS ) ) {
 }
 
 if ( empty ( $error ) ) {
-  if ( $updating_public )
+  if ( $updating_public ) {
     do_redirect ( "pref.php?public=1" );
-  else
+  } elseif (($is_admin || $is_nonuser_admin) && $login != $user ) {
+    do_redirect ( "pref.php?user=$user" );
+  } else {
     do_redirect ( "pref.php" );
+  }
 }
 print_header();
 ?>
